updates for testing. needs work

--- a/app/views/hearings/pages/casedetailsdivorce.html
+++ b/app/views/hearings/pages/casedetailsdivorce.html
@@ -104,7 +104,11 @@ Case details
                                 <thead class="govuk-table__head">
                                 <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
-                                    <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet processed</td>
+                                    {% if data.aftertenbmins == 'true' %}
+                                        <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet scheduled</td>
+                                    {%  else  %}
+                                        <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet processed</td>
+                                    {%  endif  %}
                                     <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&">View details</a></td>
                                     <td class="govuk-table__cell" style="text-align: right;"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">Cancel</a></td>
                                 </tr>
@@ -117,16 +121,19 @@ Case details
 
                         <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-1">Upcoming hearings</h2>
 
-                        <table class="govuk-table govuk-!-margin-bottom-4">
-                            <thead class="govuk-table__head">
-                            <tbody class="govuk-table__body">
-                                <tr class="govuk-table__row">
-                                    <td scope="row" class="govuk-table__cell" style="width:200px;">19 August 2021</td>
-                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View and change</a></td>
-                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">Cancel</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        {% if data.hidecurrent != 'true' %}
+                            <table class="govuk-table govuk-!-margin-bottom-4">
+                                <thead class="govuk-table__head">
+                                <tbody class="govuk-table__body">
+                                    <tr class="govuk-table__row">
+                                        <td scope="row" class="govuk-table__cell" style="width:200px;">5 Otober 2021</td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View and change</a></td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">Cancel</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        {% endif %}
+
 
 
                         <form
@@ -145,35 +152,37 @@ Case details
                         </form>
 
 
+                        {% if data.hidepast != 'true' %}
+                            <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">Past hearings</h2>
 
-                        <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">Past hearings</h2>
+                            <table class="govuk-table" id="pastshearings" style="width: 325px;">
+                                <thead class="govuk-table__head">
+                                <tbody class="govuk-table__body">
+                                    <tr class="govuk-table__row">
+                                        <td scope="row" class="govuk-table__cell" style="width:200px;">5 May 2021</td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&">View details</a></td>
+                                    </tr>
+                                    <tr class="govuk-table__row">
+                                        <td scope="row" class="govuk-table__cell">13 December 2021</td>
+                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&"">View details</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        {% endif %}
 
-                        <table class="govuk-table" id="pastshearings" style="width: 325px;">
-                            <thead class="govuk-table__head">
-                            <tbody class="govuk-table__body">
+                        {% if data.hidecancelled != 'true' %}
+                            <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">Cancelled hearings</h2>
+
+                            <table class="govuk-table govuk-!-margin-bottom-4" style="width: 325px;">
+                                <thead class="govuk-table__head">
+                                <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
-                                    <td scope="row" class="govuk-table__cell" style="width:200px;">5 May 2021</td>
-                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&">View details</a></td>
+                                    <td scope="row" class="govuk-table__cell" style="width:200px;">11 May 2021</td>
+                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View details</a></td>
                                 </tr>
-                                <tr class="govuk-table__row">
-                                    <td scope="row" class="govuk-table__cell">13 December 2021</td>
-                                    <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&"">View details</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-
-
-                        <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">Cancelled hearings</h2>
-
-                        <table class="govuk-table govuk-!-margin-bottom-4" style="width: 325px;">
-                            <thead class="govuk-table__head">
-                            <tbody class="govuk-table__body">
-                            <tr class="govuk-table__row">
-                                <td scope="row" class="govuk-table__cell" style="width:200px;">11 May 2021</td>
-                                <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View details</a></td>
-                            </tr>
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        {% endif %}
 
 
                     </div>
