--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -37,29 +37,29 @@ Case details
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
                                             <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" onclick="showJudges();">
-                                                <label class="govuk-label govuk-radios__label" for="contact"  onclick="showJudges();">
+                                                <input class="govuk-radios__input" id="specificjudge-1" name="specificjudge" type="radio" value="Yes" onclick="showJudges();"  {% if data.specificjudge == 'Yes' %}  Checked {% endif %} >
+                                                <label class="govuk-label govuk-radios__label" for="specificjudge-1"  onclick="showJudges();">
                                                     Yes
                                                 </label>
                                             </div>
-                                            <div class="govuk-radios__conditional" id="conditionaljudge" style="display:none;">
+                                            <div class="govuk-radios__conditional" id="conditionaljudge" style="display:none; {% if data.specificjudge == 'Yes' %}  display:block;" {% endif %} ">
                                                 <div class="govuk-form-group">
-                                                    <label class="govuk-label" for="contact-by-email">
+                                                    <label class="govuk-label" for="judgename">
                                                         Name of the judge
                                                     </label>
-                                                    <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
+                                                    <input class="govuk-input govuk-!-width-one-third" id="judgename" name="judgename"  spellcheck="false">
                                                 </div>
                                             </div>
 
                                             <div class="govuk-radios__item">
-                                                <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text"   onclick="hideJudges(); ">
-                                                <label class="govuk-label govuk-radios__label" for="contact-3" onclick="hideJudges(); ">
+                                                <input class="govuk-radios__input" id="specificjudge-2" name="specificjudge" type="radio" value="No"   onclick="hideJudges(); "   {% if data.specificjudge == 'No' %}  Checked {% endif %} >
+                                                <label class="govuk-label govuk-radios__label" for="specificjudge-2" onclick="hideJudges(); " >
                                                     No
                                                 </label>
                                             </div>
 
 
-                                            <div class="govuk-radios__conditional" id="conditionaljudgelevels"  style="display:none;">
+                                            <div class="govuk-radios__conditional" id="conditionaljudgelevels"  style="display:none; {% if data.specificjudge == 'No' %}  display:block;" {% endif %} ">
 
                                                 <div class="govuk-form-group">
                                                     <br>
@@ -69,25 +69,25 @@ Case details
                                                         </legend>
                                                         <div class="govuk-radios">
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgecontract1" name="judgecontract" type="radio" value="All" checked>
+                                                                <input class="govuk-radios__input" id="judgecontract1" name="judgecontract" type="radio" value="All" checked  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract1">
                                                                     All
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgecontract2" name="judgecontract" type="radio" value="Tribunal Judge - salaried">
+                                                                <input class="govuk-radios__input" id="judgecontract2" name="judgecontract" type="radio" value="Tribunal Judge - salaried"  {% if data.judgecontract == 'Tribunal Judge - salaried' %}  Checked {% endif %} >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract2">
                                                                     Tribunal Judge - salaried
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgecontract3" name="judgecontract" type="radio" value="Tribunal Judge - fee-paid">
+                                                                <input class="govuk-radios__input" id="judgecontract3" name="judgecontract" type="radio" value="Tribunal Judge - fee-paid" {% if data.judgecontract == 'Tribunal Judge - fee-paid' %}  Checked {% endif %} >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract3">
                                                                     Tribunal Judge - fee-paid
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
-                                                                <input class="govuk-radios__input" id="judgecontract4" name="judgecontract" type="radio" value="Regional Tribunal Judge">
+                                                                <input class="govuk-radios__input" id="judgecontract4" name="judgecontract" type="radio" value="Regional Tribunal Judge" {% if data.judgecontract == 'Regional Tribunal Judge' %}  Checked {% endif %} >
                                                                 <label class="govuk-label govuk-radios__label" for="judgecontract4">
                                                                     Regional Tribunal Judge
                                                                 </label>
@@ -164,7 +164,7 @@ Case details
                                                         <label class="govuk-label govuk-!-font-weight-bold" for="contact-by-email">
                                                             Exclude a judge who wasn't on a previous panel (optional)
                                                         </label>
-                                                        <input class="govuk-input govuk-!-width-one-third" name="contact-by-email" type="email" spellcheck="false" autocomplete="email"  id="exludejudgefield"  style="display:none;">
+                                                        <input class="govuk-input govuk-!-width-one-third" name="exludejudgefield" type="text" id="exludejudgefield"  style="display:none;">
                                                     </div>
                                                     <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="exludenewjudge" onclick="excludejudge();">
                                                         Exclude a judge
@@ -188,10 +188,10 @@ Case details
 
                             <div class="" id="conditionaljudge">
                                 <div class="govuk-form-group govuk-!-margin-bottom-0">
-                                    <label class="govuk-label govuk-!-font-weight-bold" for="contact-by-email">
+                                    <label class="govuk-label govuk-!-font-weight-bold" for="addpersonsname">
                                         Include specific panel members (optional)
                                     </label>
-                                    <input class="govuk-input govuk-!-width-one-third" name="contact-by-email" type="text" spellcheck="false" id="addpersonsname" style="display:none;">
+                                    <input class="govuk-input govuk-!-width-one-third" name="addpersonsname" type="text" spellcheck="false" id="addpersonsname" style="display:none;">
                                 </div>
                                 <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="addperson" onclick="addperson();">
                                     Add person
@@ -205,12 +205,12 @@ Case details
 
                             <div class="" id="conditionaljudge">
                                 <div class="govuk-form-group govuk-!-margin-bottom-0">
-                                    <label class="govuk-label govuk-!-font-weight-bold" for="contact-by-email">
+                                    <label class="govuk-label govuk-!-font-weight-bold" for="excludepersonsname">
                                         Exclude specific panel members (optional)
                                     </label>
-                                    <input class="govuk-input govuk-!-width-one-third" name="contact-by-email" type="text" spellcheck="false" id="excludepersonsname" style="display:none;">
+                                    <input class="govuk-input govuk-!-width-one-third" name="excludepersonsname" type="text" spellcheck="false" id="excludepersonsname" style="display:none;">
                                 </div>
-                                <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="excludeperson" onclick="excludejudge();">
+                                <p class="govuk-button govuk-button--secondary govuk-!-margin-top-0 " data-module="govuk-button" id="excludeperson" onclick="excludeperson();">
                                     Exclude person
                                 </p>
                                 <p class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button" id="excludeanotherperson" style="display:none;">
@@ -233,25 +233,25 @@ Case details
                                     </div>
                                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                                         <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="panelmember1" name="panelmember1" type="checkbox" value="Medical member" checked>
+                                            <input class="govuk-checkboxes__input" id="panelmember1" name="panelmember1" type="checkbox"  checked>
                                             <label class="govuk-label govuk-checkboxes__label" for="panelmember1">
                                                 Regional Medical Member
                                             </label>
                                         </div>
                                         <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="panelmember2" name="panelmember2" type="checkbox" value="Disability qualified member">
+                                            <input class="govuk-checkboxes__input" id="panelmember2" name="panelmember2" type="checkbox" >
                                             <label class="govuk-label govuk-checkboxes__label" for="panelmember2">
                                                 Tribunal Medical Member
                                             </label>
                                         </div>
                                         <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="panelmember3" name="panelmember3" type="checkbox" value="Financely qualified member">
+                                            <input class="govuk-checkboxes__input" id="panelmember3" name="panelmember3" type="checkbox" >
                                             <label class="govuk-label govuk-checkboxes__label" for="panelmember3">
                                                 Tribunal Specialist Medical Member
                                             </label>
                                         </div>
                                         <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="panelmember4" name="panelmember4" type="checkbox" value="Financely qualified member" checked>
+                                            <input class="govuk-checkboxes__input" id="panelmember4" name="panelmember4" type="checkbox" checked>
                                             <label class="govuk-label govuk-checkboxes__label" for="panelmember4">
                                                 Disability Qualified Member
                                             </label>
