remove cancel links

--- a/app/views/hearings/pages/casedetailsdivorce.html
+++ b/app/views/hearings/pages/casedetailsdivorce.html
@@ -110,7 +110,7 @@ Case details
                                         <td scope="row" class="govuk-table__cell" style="width:200px;">Submitted but not yet processed</td>
                                     {%  endif  %}
                                     <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=false&">View details</a></td>
-                                    <td class="govuk-table__cell" style="text-align: right;"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">Cancel</a></td>
+                                    <td class="govuk-table__cell" style="text-align: right;"><a href="#">Cancel</a></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -128,7 +128,7 @@ Case details
                                     <tr class="govuk-table__row">
                                         <td scope="row" class="govuk-table__cell" style="width:200px;">5 Otober 2021</td>
                                         <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">View and change</a></td>
-                                        <td class="govuk-table__cell"><a href="checkyouranswers?drafthearing=falce&changesallowed=true&">Cancel</a></td>
+                                        <td class="govuk-table__cell"><a href="#">Cancel</a></td>
                                     </tr>
                                 </tbody>
                             </table>
