check answers and default selection showing

--- a/app/views/hearings/pages/checkyouranswers.html
+++ b/app/views/hearings/pages/checkyouranswers.html
@@ -424,7 +424,7 @@ Case details
 
                                                 <div class="govuk-summary-list__row">
                                                     <dt class="govuk-summary-list__key">
-                                                        How urgent is the hearing?  (optional)
+                                                        Is this a priority hearing? (optional)
                                                     <dd class="govuk-summary-list__value">
 
                                                     </dd>
