--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -209,7 +209,7 @@ Case details
 
                             <!--  SLA  -->
                             <div class="govuk-inset-text">
-                                5 Days since SLA start date
+                                5 days since SLA start date
                             </div>
 
 
