fixes for testing

--- a/app/views/hearings/pages/confirmation.html
+++ b/app/views/hearings/pages/confirmation.html
@@ -14,7 +14,7 @@ Case details
 
 
 
-                        <div class="govuk-grid-column-two-thirds">
+                        <div class="govuk-grid-column-two-thirds govuk-!-margin-top-9 govuk-!-padding-0">
                             <div class="govuk-panel govuk-panel--confirmation" style="background-color: #00703c">
                                 <h1 class="govuk-panel__title">
                                     Hearing request submitted
